src/objects/FieloCMS__Tag__c.object
<CustomObject>
    <fields>
        <fullName>FieloCMS__DocumentId__c</fullName>
        <label>Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Items__c</fullName>
        <label>Items</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Objects__c</fullName>
        <label>Objects</label>
        <picklist>
            <picklistValues>
                <fullName>FieloCMS__Post__c</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FieloCMS__Media__c</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCMS__URL__c</fullName>
        <formula>IF ( IsBlank(FieloCMS__DocumentId__c), &apos;&apos;, 
&apos;//c.&apos; + $Setup.FieloCMS__OrganizationSettings__c.FieloCMS__Instance__c  + &apos;.content.force.com/servlet/servlet.ImageServer?id=&apos; + FieloCMS__DocumentId__c + &apos;&amp;oid=&apos; + $Organization.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    
    <label>Tag</label>
    <nameField>
        <label>Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>